# flask-useragent

./: .gitignore  README.md  setup.cfg  tox.ini
examples/: demo.py  readme_demo.py
flask_useragent/: __init__.py  flask.py  helper.py
tests/: conftest.py  test_flask.py  test_helper.py
