[metadata]
name = flask_useragent
version = 0.0.2
description = Adds the functionality to flask to define different functions for different useragents
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    Flask>=2.1.1
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*
